tests/fail/semantic/builtin_as_product.cyt
enzyme BuiltinAsProduct[] -> int

// args: --no-colour

// expected stderr:
// error: builtin type `int` cannot be used as a product
//   ┌─ ../tests/fail/semantic/builtin_as_product.cyt:1:30
//   │
// 1 │ enzyme BuiltinAsProduct[] -> int
//   │                              ^^^ builtin type cannot be used a product